chore: remove generateChallenge and revoke endpoints
